Version 2.4
* Post NRAO-DiFX 1.1 dev branch

Version 2.3
* Support for writing FITS files larger than 2 GiB
* Option to force each input file into its own output file
* Pay attention to difx versions
* Don't write out vis records that occur over a scan change
* Version for NRAO-DiFX 1.1

Version 2.2
* Use .im file to generate ML, MC table if file exists
* Minor improvements to FR, ML, MC, AG, CT, SU, GN, TS, FL tables
* Fix MC table -- index to model is dsId, not antId

Version 2.1
* Sorts by antenna name by default.  override with -k

Version 2.0
* New visibility writing code -- will merge multiple input files
  into single FITS file in time order.
* use fitsSourceId to keep the source table as small as possible, without
  repeats
* fix delay values in ML (IM) table
* fix uninitialized freq offset vals in SU table
* use difxio >= 2.0
* start of pulsar table support

Version 1.9
* Use difxio >= 1.7

Version 1.8
* Use vlog output to generate FG, TS, PH, WX tables (WX is suspect)
* Use gain curve files to generate GC (from env var GAIN_CURVE_PATH)
* Use autoconf endianness detection -- remove byteorder.[ch]
* Write spacecraft orbit table

Version 1.7
* support scaling parameter

Version 1.6
* Respect .flag file
* Print more information

Version 1.5
* Fix up configure.ac a bit more

Version 1.4
* Summarize tables at end
* Allow --no-model option

Version 1.3
* Amplitude scaling

Version 1.2
* Fix sign of gdelay, grate in MC table, and subtract off the atmosphere.
* FFT_SIZE fix in MC table
* Update automake a bit

Version 1.1
* Don't require .calc, .rates files

Version 1.0
* Initial version.  